# apps/api/ent/benefit.go
@@ -1,125 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package ent
-
-import (
-	"fmt"
-	"strings"
-
-	"entgo.io/ent"
-	"entgo.io/ent/dialect/sql"
-	"github.com/hashiguchip/resume_2026/apps/api/ent/benefit"
-)
-
-// Benefit is the model entity for the Benefit schema.
-type Benefit struct {
-	config `json:"-"`
-	// ID of the ent.
-	ID int `json:"id,omitempty"`
-	// Title holds the value of the "title" field.
-	Title string `json:"title,omitempty"`
-	// Description holds the value of the "description" field.
-	Description string `json:"description,omitempty"`
-	// DisplayOrder holds the value of the "display_order" field.
-	DisplayOrder int `json:"display_order,omitempty"`
-	selectValues sql.SelectValues
-}
-
-// scanValues returns the types for scanning values from sql.Rows.
-func (*Benefit) scanValues(columns []string) ([]any, error) {
-	values := make([]any, len(columns))
-	for i := range columns {
-		switch columns[i] {
-		case benefit.FieldID, benefit.FieldDisplayOrder:
-			values[i] = new(sql.NullInt64)
-		case benefit.FieldTitle, benefit.FieldDescription:
-			values[i] = new(sql.NullString)
-		default:
-			values[i] = new(sql.UnknownType)
-		}
-	}
-	return values, nil
-}
-
-// assignValues assigns the values that were returned from sql.Rows (after scanning)
-// to the Benefit fields.
-func (_m *Benefit) assignValues(columns []string, values []any) error {
-	if m, n := len(values), len(columns); m < n {
-		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
-	}
-	for i := range columns {
-		switch columns[i] {
-		case benefit.FieldID:
-			value, ok := values[i].(*sql.NullInt64)
-			if !ok {
-				return fmt.Errorf("unexpected type %T for field id", value)
-			}
-			_m.ID = int(value.Int64)
-		case benefit.FieldTitle:
-			if value, ok := values[i].(*sql.NullString); !ok {
-				return fmt.Errorf("unexpected type %T for field title", values[i])
-			} else if value.Valid {
-				_m.Title = value.String
-			}
-		case benefit.FieldDescription:
-			if value, ok := values[i].(*sql.NullString); !ok {
-				return fmt.Errorf("unexpected type %T for field description", values[i])
-			} else if value.Valid {
-				_m.Description = value.String
-			}
-		case benefit.FieldDisplayOrder:
-			if value, ok := values[i].(*sql.NullInt64); !ok {
-				return fmt.Errorf("unexpected type %T for field display_order", values[i])
-			} else if value.Valid {
-				_m.DisplayOrder = int(value.Int64)
-			}
-		default:
-			_m.selectValues.Set(columns[i], values[i])
-		}
-	}
-	return nil
-}
-
-// Value returns the ent.Value that was dynamically selected and assigned to the Benefit.
-// This includes values selected through modifiers, order, etc.
-func (_m *Benefit) Value(name string) (ent.Value, error) {
-	return _m.selectValues.Get(name)
-}
-
-// Update returns a builder for updating this Benefit.
-// Note that you need to call Benefit.Unwrap() before calling this method if this Benefit
-// was returned from a transaction, and the transaction was committed or rolled back.
-func (_m *Benefit) Update() *BenefitUpdateOne {
-	return NewBenefitClient(_m.config).UpdateOne(_m)
-}
-
-// Unwrap unwraps the Benefit entity that was returned from a transaction after it was closed,
-// so that all future queries will be executed through the driver which created the transaction.
-func (_m *Benefit) Unwrap() *Benefit {
-	_tx, ok := _m.config.driver.(*txDriver)
-	if !ok {
-		panic("ent: Benefit is not a transactional entity")
-	}
-	_m.config.driver = _tx.drv
-	return _m
-}
-
-// String implements the fmt.Stringer.
-func (_m *Benefit) String() string {
-	var builder strings.Builder
-	builder.WriteString("Benefit(")
-	builder.WriteString(fmt.Sprintf("id=%v, ", _m.ID))
-	builder.WriteString("title=")
-	builder.WriteString(_m.Title)
-	builder.WriteString(", ")
-	builder.WriteString("description=")
-	builder.WriteString(_m.Description)
-	builder.WriteString(", ")
-	builder.WriteString("display_order=")
-	builder.WriteString(fmt.Sprintf("%v", _m.DisplayOrder))
-	builder.WriteByte(')')
-	return builder.String()
-}
-
-// Benefits is a parsable slice of Benefit.
-type Benefits []*Benefit
