# apps/api/ent/painpoint_delete.go
@@ -1,88 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package ent
-
-import (
-	"context"
-
-	"entgo.io/ent/dialect/sql"
-	"entgo.io/ent/dialect/sql/sqlgraph"
-	"entgo.io/ent/schema/field"
-	"github.com/hashiguchip/resume_2026/apps/api/ent/painpoint"
-	"github.com/hashiguchip/resume_2026/apps/api/ent/predicate"
-)
-
-// PainPointDelete is the builder for deleting a PainPoint entity.
-type PainPointDelete struct {
-	config
-	hooks    []Hook
-	mutation *PainPointMutation
-}
-
-// Where appends a list predicates to the PainPointDelete builder.
-func (_d *PainPointDelete) Where(ps ...predicate.PainPoint) *PainPointDelete {
-	_d.mutation.Where(ps...)
-	return _d
-}
-
-// Exec executes the deletion query and returns how many vertices were deleted.
-func (_d *PainPointDelete) Exec(ctx context.Context) (int, error) {
-	return withHooks(ctx, _d.sqlExec, _d.mutation, _d.hooks)
-}
-
-// ExecX is like Exec, but panics if an error occurs.
-func (_d *PainPointDelete) ExecX(ctx context.Context) int {
-	n, err := _d.Exec(ctx)
-	if err != nil {
-		panic(err)
-	}
-	return n
-}
-
-func (_d *PainPointDelete) sqlExec(ctx context.Context) (int, error) {
-	_spec := sqlgraph.NewDeleteSpec(painpoint.Table, sqlgraph.NewFieldSpec(painpoint.FieldID, field.TypeInt))
-	if ps := _d.mutation.predicates; len(ps) > 0 {
-		_spec.Predicate = func(selector *sql.Selector) {
-			for i := range ps {
-				ps[i](selector)
-			}
-		}
-	}
-	affected, err := sqlgraph.DeleteNodes(ctx, _d.driver, _spec)
-	if err != nil && sqlgraph.IsConstraintError(err) {
-		err = &ConstraintError{msg: err.Error(), wrap: err}
-	}
-	_d.mutation.done = true
-	return affected, err
-}
-
-// PainPointDeleteOne is the builder for deleting a single PainPoint entity.
-type PainPointDeleteOne struct {
-	_d *PainPointDelete
-}
-
-// Where appends a list predicates to the PainPointDelete builder.
-func (_d *PainPointDeleteOne) Where(ps ...predicate.PainPoint) *PainPointDeleteOne {
-	_d._d.mutation.Where(ps...)
-	return _d
-}
-
-// Exec executes the deletion query.
-func (_d *PainPointDeleteOne) Exec(ctx context.Context) error {
-	n, err := _d._d.Exec(ctx)
-	switch {
-	case err != nil:
-		return err
-	case n == 0:
-		return &NotFoundError{painpoint.Label}
-	default:
-		return nil
-	}
-}
-
-// ExecX is like Exec, but panics if an error occurs.
-func (_d *PainPointDeleteOne) ExecX(ctx context.Context) {
-	if err := _d.Exec(ctx); err != nil {
-		panic(err)
-	}
-}
