# apps/api/ent/phase/where.go
@@ -1,212 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package phase
-
-import (
-	"entgo.io/ent/dialect/sql"
-	"entgo.io/ent/dialect/sql/sqlgraph"
-	"github.com/hashiguchip/resume_2026/apps/api/ent/predicate"
-)
-
-// ID filters vertices based on their ID field.
-func ID(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldEQ(FieldID, id))
-}
-
-// IDEQ applies the EQ predicate on the ID field.
-func IDEQ(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldEQ(FieldID, id))
-}
-
-// IDNEQ applies the NEQ predicate on the ID field.
-func IDNEQ(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldNEQ(FieldID, id))
-}
-
-// IDIn applies the In predicate on the ID field.
-func IDIn(ids ...string) predicate.Phase {
-	return predicate.Phase(sql.FieldIn(FieldID, ids...))
-}
-
-// IDNotIn applies the NotIn predicate on the ID field.
-func IDNotIn(ids ...string) predicate.Phase {
-	return predicate.Phase(sql.FieldNotIn(FieldID, ids...))
-}
-
-// IDGT applies the GT predicate on the ID field.
-func IDGT(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldGT(FieldID, id))
-}
-
-// IDGTE applies the GTE predicate on the ID field.
-func IDGTE(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldGTE(FieldID, id))
-}
-
-// IDLT applies the LT predicate on the ID field.
-func IDLT(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldLT(FieldID, id))
-}
-
-// IDLTE applies the LTE predicate on the ID field.
-func IDLTE(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldLTE(FieldID, id))
-}
-
-// IDEqualFold applies the EqualFold predicate on the ID field.
-func IDEqualFold(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldEqualFold(FieldID, id))
-}
-
-// IDContainsFold applies the ContainsFold predicate on the ID field.
-func IDContainsFold(id string) predicate.Phase {
-	return predicate.Phase(sql.FieldContainsFold(FieldID, id))
-}
-
-// DisplayOrder applies equality check predicate on the "display_order" field. It's identical to DisplayOrderEQ.
-func DisplayOrder(v int) predicate.Phase {
-	return predicate.Phase(sql.FieldEQ(FieldDisplayOrder, v))
-}
-
-// LabelEQ applies the EQ predicate on the "label" field.
-func LabelEQ(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldEQ(FieldLabel, v))
-}
-
-// LabelNEQ applies the NEQ predicate on the "label" field.
-func LabelNEQ(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldNEQ(FieldLabel, v))
-}
-
-// LabelIn applies the In predicate on the "label" field.
-func LabelIn(vs ...string) predicate.Phase {
-	return predicate.Phase(sql.FieldIn(FieldLabel, vs...))
-}
-
-// LabelNotIn applies the NotIn predicate on the "label" field.
-func LabelNotIn(vs ...string) predicate.Phase {
-	return predicate.Phase(sql.FieldNotIn(FieldLabel, vs...))
-}
-
-// LabelGT applies the GT predicate on the "label" field.
-func LabelGT(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldGT(FieldLabel, v))
-}
-
-// LabelGTE applies the GTE predicate on the "label" field.
-func LabelGTE(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldGTE(FieldLabel, v))
-}
-
-// LabelLT applies the LT predicate on the "label" field.
-func LabelLT(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldLT(FieldLabel, v))
-}
-
-// LabelLTE applies the LTE predicate on the "label" field.
-func LabelLTE(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldLTE(FieldLabel, v))
-}
-
-// LabelContains applies the Contains predicate on the "label" field.
-func LabelContains(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldContains(FieldLabel, v))
-}
-
-// LabelHasPrefix applies the HasPrefix predicate on the "label" field.
-func LabelHasPrefix(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldHasPrefix(FieldLabel, v))
-}
-
-// LabelHasSuffix applies the HasSuffix predicate on the "label" field.
-func LabelHasSuffix(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldHasSuffix(FieldLabel, v))
-}
-
-// LabelEqualFold applies the EqualFold predicate on the "label" field.
-func LabelEqualFold(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldEqualFold(FieldLabel, v))
-}
-
-// LabelContainsFold applies the ContainsFold predicate on the "label" field.
-func LabelContainsFold(v string) predicate.Phase {
-	return predicate.Phase(sql.FieldContainsFold(FieldLabel, v))
-}
-
-// DisplayOrderEQ applies the EQ predicate on the "display_order" field.
-func DisplayOrderEQ(v int) predicate.Phase {
-	return predicate.Phase(sql.FieldEQ(FieldDisplayOrder, v))
-}
-
-// DisplayOrderNEQ applies the NEQ predicate on the "display_order" field.
-func DisplayOrderNEQ(v int) predicate.Phase {
-	return predicate.Phase(sql.FieldNEQ(FieldDisplayOrder, v))
-}
-
-// DisplayOrderIn applies the In predicate on the "display_order" field.
-func DisplayOrderIn(vs ...int) predicate.Phase {
-	return predicate.Phase(sql.FieldIn(FieldDisplayOrder, vs...))
-}
-
-// DisplayOrderNotIn applies the NotIn predicate on the "display_order" field.
-func DisplayOrderNotIn(vs ...int) predicate.Phase {
-	return predicate.Phase(sql.FieldNotIn(FieldDisplayOrder, vs...))
-}
-
-// DisplayOrderGT applies the GT predicate on the "display_order" field.
-func DisplayOrderGT(v int) predicate.Phase {
-	return predicate.Phase(sql.FieldGT(FieldDisplayOrder, v))
-}
-
-// DisplayOrderGTE applies the GTE predicate on the "display_order" field.
-func DisplayOrderGTE(v int) predicate.Phase {
-	return predicate.Phase(sql.FieldGTE(FieldDisplayOrder, v))
-}
-
-// DisplayOrderLT applies the LT predicate on the "display_order" field.
-func DisplayOrderLT(v int) predicate.Phase {
-	return predicate.Phase(sql.FieldLT(FieldDisplayOrder, v))
-}
-
-// DisplayOrderLTE applies the LTE predicate on the "display_order" field.
-func DisplayOrderLTE(v int) predicate.Phase {
-	return predicate.Phase(sql.FieldLTE(FieldDisplayOrder, v))
-}
-
-// HasProjects applies the HasEdge predicate on the "projects" edge.
-func HasProjects() predicate.Phase {
-	return predicate.Phase(func(s *sql.Selector) {
-		step := sqlgraph.NewStep(
-			sqlgraph.From(Table, FieldID),
-			sqlgraph.Edge(sqlgraph.M2M, true, ProjectsTable, ProjectsPrimaryKey...),
-		)
-		sqlgraph.HasNeighbors(s, step)
-	})
-}
-
-// HasProjectsWith applies the HasEdge predicate on the "projects" edge with a given conditions (other predicates).
-func HasProjectsWith(preds ...predicate.Project) predicate.Phase {
-	return predicate.Phase(func(s *sql.Selector) {
-		step := newProjectsStep()
-		sqlgraph.HasNeighborsWith(s, step, func(s *sql.Selector) {
-			for _, p := range preds {
-				p(s)
-			}
-		})
-	})
-}
-
-// And groups predicates with the AND operator between them.
-func And(predicates ...predicate.Phase) predicate.Phase {
-	return predicate.Phase(sql.AndPredicates(predicates...))
-}
-
-// Or groups predicates with the OR operator between them.
-func Or(predicates ...predicate.Phase) predicate.Phase {
-	return predicate.Phase(sql.OrPredicates(predicates...))
-}
-
-// Not applies the not operator on the given predicate.
-func Not(p predicate.Phase) predicate.Phase {
-	return predicate.Phase(sql.NotPredicates(p))
-}
