# apps/api/ent/requirement/requirement.go
@@ -1,95 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package requirement
-
-import (
-	"fmt"
-
-	"entgo.io/ent/dialect/sql"
-)
-
-const (
-	// Label holds the string label denoting the requirement type in the database.
-	Label = "requirement"
-	// FieldID holds the string denoting the id field in the database.
-	FieldID = "id"
-	// FieldKind holds the string denoting the kind field in the database.
-	FieldKind = "kind"
-	// FieldText holds the string denoting the text field in the database.
-	FieldText = "text"
-	// FieldDisplayOrder holds the string denoting the display_order field in the database.
-	FieldDisplayOrder = "display_order"
-	// Table holds the table name of the requirement in the database.
-	Table = "requirements"
-)
-
-// Columns holds all SQL columns for requirement fields.
-var Columns = []string{
-	FieldID,
-	FieldKind,
-	FieldText,
-	FieldDisplayOrder,
-}
-
-// ValidColumn reports if the column name is valid (part of the table columns).
-func ValidColumn(column string) bool {
-	for i := range Columns {
-		if column == Columns[i] {
-			return true
-		}
-	}
-	return false
-}
-
-var (
-	// TextValidator is a validator for the "text" field. It is called by the builders before save.
-	TextValidator func(string) error
-	// DefaultDisplayOrder holds the default value on creation for the "display_order" field.
-	DefaultDisplayOrder int
-)
-
-// Kind defines the type for the "kind" enum field.
-type Kind string
-
-// Kind values.
-const (
-	KindMustHave   Kind = "must_have"
-	KindNiceToHave Kind = "nice_to_have"
-)
-
-func (k Kind) String() string {
-	return string(k)
-}
-
-// KindValidator is a validator for the "kind" field enum values. It is called by the builders before save.
-func KindValidator(k Kind) error {
-	switch k {
-	case KindMustHave, KindNiceToHave:
-		return nil
-	default:
-		return fmt.Errorf("requirement: invalid enum value for kind field: %q", k)
-	}
-}
-
-// OrderOption defines the ordering options for the Requirement queries.
-type OrderOption func(*sql.Selector)
-
-// ByID orders the results by the id field.
-func ByID(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldID, opts...).ToFunc()
-}
-
-// ByKind orders the results by the kind field.
-func ByKind(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldKind, opts...).ToFunc()
-}
-
-// ByText orders the results by the text field.
-func ByText(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldText, opts...).ToFunc()
-}
-
-// ByDisplayOrder orders the results by the display_order field.
-func ByDisplayOrder(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldDisplayOrder, opts...).ToFunc()
-}
