# apps/api/ent/tech/tech.go
@@ -1,109 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package tech
-
-import (
-	"entgo.io/ent/dialect/sql"
-	"entgo.io/ent/dialect/sql/sqlgraph"
-)
-
-const (
-	// Label holds the string label denoting the tech type in the database.
-	Label = "tech"
-	// FieldID holds the string denoting the id field in the database.
-	FieldID = "id"
-	// FieldLabel holds the string denoting the label field in the database.
-	FieldLabel = "label"
-	// FieldCategory holds the string denoting the category field in the database.
-	FieldCategory = "category"
-	// FieldDisplayOrder holds the string denoting the display_order field in the database.
-	FieldDisplayOrder = "display_order"
-	// EdgeProjects holds the string denoting the projects edge name in mutations.
-	EdgeProjects = "projects"
-	// Table holds the table name of the tech in the database.
-	Table = "techs"
-	// ProjectsTable is the table that holds the projects relation/edge. The primary key declared below.
-	ProjectsTable = "project_techs"
-	// ProjectsInverseTable is the table name for the Project entity.
-	// It exists in this package in order to avoid circular dependency with the "project" package.
-	ProjectsInverseTable = "projects"
-)
-
-// Columns holds all SQL columns for tech fields.
-var Columns = []string{
-	FieldID,
-	FieldLabel,
-	FieldCategory,
-	FieldDisplayOrder,
-}
-
-var (
-	// ProjectsPrimaryKey and ProjectsColumn2 are the table columns denoting the
-	// primary key for the projects relation (M2M).
-	ProjectsPrimaryKey = []string{"project_id", "tech_id"}
-)
-
-// ValidColumn reports if the column name is valid (part of the table columns).
-func ValidColumn(column string) bool {
-	for i := range Columns {
-		if column == Columns[i] {
-			return true
-		}
-	}
-	return false
-}
-
-var (
-	// LabelValidator is a validator for the "label" field. It is called by the builders before save.
-	LabelValidator func(string) error
-	// CategoryValidator is a validator for the "category" field. It is called by the builders before save.
-	CategoryValidator func(string) error
-	// DefaultDisplayOrder holds the default value on creation for the "display_order" field.
-	DefaultDisplayOrder int
-	// IDValidator is a validator for the "id" field. It is called by the builders before save.
-	IDValidator func(string) error
-)
-
-// OrderOption defines the ordering options for the Tech queries.
-type OrderOption func(*sql.Selector)
-
-// ByID orders the results by the id field.
-func ByID(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldID, opts...).ToFunc()
-}
-
-// ByLabel orders the results by the label field.
-func ByLabel(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldLabel, opts...).ToFunc()
-}
-
-// ByCategory orders the results by the category field.
-func ByCategory(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldCategory, opts...).ToFunc()
-}
-
-// ByDisplayOrder orders the results by the display_order field.
-func ByDisplayOrder(opts ...sql.OrderTermOption) OrderOption {
-	return sql.OrderByField(FieldDisplayOrder, opts...).ToFunc()
-}
-
-// ByProjectsCount orders the results by projects count.
-func ByProjectsCount(opts ...sql.OrderTermOption) OrderOption {
-	return func(s *sql.Selector) {
-		sqlgraph.OrderByNeighborsCount(s, newProjectsStep(), opts...)
-	}
-}
-
-// ByProjects orders the results by projects terms.
-func ByProjects(term sql.OrderTerm, terms ...sql.OrderTerm) OrderOption {
-	return func(s *sql.Selector) {
-		sqlgraph.OrderByNeighborTerms(s, newProjectsStep(), append([]sql.OrderTerm{term}, terms...)...)
-	}
-}
-func newProjectsStep() *sqlgraph.Step {
-	return sqlgraph.NewStep(
-		sqlgraph.From(Table, FieldID),
-		sqlgraph.To(ProjectsInverseTable, FieldID),
-		sqlgraph.Edge(sqlgraph.M2M, true, ProjectsTable, ProjectsPrimaryKey...),
-	)
-}
